--- a/app/src/main/res/layout/fragment_edittext.xml
+++ b/app/src/main/res/layout/fragment_edittext.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:hint="@string/write_something"
-        android:id="@+id/textEditor"/>
+        android:id="@+id/textEditor"
+        />
 
-</FrameLayout>
+</LinearLayout>
