--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,14 @@
     android:orientation="vertical"
     android:weightSum="1"
     android:layout_margin="10dp">
+    <!-- I had to box these linearLayouts so i could get this setup correctly
+    because i needed the parent to be vertical but i also needed a horizontal layout -->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <RadioGroup
+    <!-- The two radio groups are basically clones of each other -->
+        <RadioGroup
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
@@ -77,6 +80,8 @@
             android:onClick="german_translate"/>
     </RadioGroup>
     </LinearLayout>
+    <!-- ENDS THE CHILD LINEAR LAYOUT -->
+    <!-- The text view where the translated words go -->
     <TextView
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -84,6 +89,7 @@
         android:layout_weight="0.5"
         android:id = "@+id/translatedword"
         />
+    <!-- The fragment that holds the edit text box -->
     <fragment
         android:layout_width="match_parent"
         android:layout_height="0dp"
